--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -7,6 +7,11 @@
   margin-right: 5%;
 }
 
+.img-animated {
+  border-radius: 1000px;
+  width: 500px;
+}
+
 .contact-heading-div {
   display: flex;
 }
