--- a/src/components/degreeCard/DegreeCard.css
+++ b/src/components/degreeCard/DegreeCard.css
@@ -21,6 +21,9 @@
 
 .card-img {
   width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: auto;
   border-radius: 50%;
   padding: 10px;
